# Gas

morse/: Cargo.toml
morse/src/: lib.rs
rx/: Cargo.toml  out.txt
rx/.cargo/: config.toml
rx/src/: main.rs  parser.rs
tx/: Cargo.toml  out.txt
tx/.cargo/: config.toml
